# evolution-data-server

./: ChangeLog  Makefile.am  NEWS  configure.ac  configure.in
addressbook/: ChangeLog
addressbook/backends/: Makefile.am
addressbook/backends/file/: Makefile.am  e-book-backend-file.c
addressbook/backends/ldap/: Makefile.am  e-book-backend-ldap.c
addressbook/idl/: Evolution-DataServer-Addressbook.idl
addressbook/libebook/: Makefile.am  e-book-listener.c  e-book-listener.h  e-book-query.c  e-book-view-private.h  e-book-view.c  e-book.c  e-book.h  e-data-book-factory-gdbus-bindings.h  e-data-book-gdbus-bindings-common.h  e-data-book-gdbus-bindings.h  e-data-book-view-gdbus-bindings.h  e-destination.c  libebook.pc.in
addressbook/libedata-book/: Makefile.am  e-book-backend-cache.c  e-book-backend-cache.h  e-book-backend-db-cache.c  e-book-backend-factory.c  e-book-backend-factory.h  e-book-backend-sexp.c  e-book-backend-sexp.h  e-book-backend-summary.c  e-book-backend-sync.h  e-book-backend.c  (+8 more)
calendar/: ChangeLog  Makefile.am
calendar/backends/caldav/: Makefile.am  e-cal-backend-caldav.c
calendar/backends/exchange/: Makefile.am  e-cal-backend-exchange-calendar.c  e-cal-backend-exchange-factory.c  e-cal-backend-exchange-factory.h  e-cal-backend-exchange-tasks.c  e-cal-backend-exchange-tasks.h  e-cal-backend-exchange.c  e-cal-backend-exchange.h  e2k-cal-query.c  e2k-cal-query.h  e2k-cal-utils.c  e2k-cal-utils.h
calendar/backends/mapi/: ChangeLog  Makefile.am  e-cal-backend-mapi-factory.c  e-cal-backend-mapi-factory.h  e-cal-backend-mapi-recur-utils.c  e-cal-backend-mapi-recur-utils.h  e-cal-backend-mapi-tz-utils.c  e-cal-backend-mapi-tz-utils.h  e-cal-backend-mapi-utils.c  e-cal-backend-mapi-utils.h  e-cal-backend-mapi.c  e-cal-backend-mapi.h
camel/: ChangeLog  Makefile.am  README.mt  camel-address.c  camel-arg.h  camel-async-handle.c  camel-async-handle.h  camel-block-file.c  camel-block-file.h  camel-certdb.c  camel-certdb.h  camel-cipher-context.c  camel-cipher-context.h  camel-data-cache.c  camel-data-cache.h  camel-data-wrapper.c  camel-data-wrapper.h  camel-db.c  camel-db.h  camel-debug.c  camel-debug.h  camel-digest-folder.c  camel-digest-folder.h  camel-digest-store.c  camel-digest-store.h  camel-digest-summary.c  camel-digest-summary.h  camel-disco-diary.c  camel-disco-diary.h  camel-disco-folder.c  camel-disco-folder.h  camel-disco-store.c  camel-disco-store.h  camel-exception.c  camel-exception.h  camel-file-utils.c  camel-file-utils.h  camel-filter-driver.c  camel-filter-driver.h  camel-filter-search.c  (+177 more)
camel/providers/local/: ChangeLog  Makefile.am  camel-local-folder.c  camel-local-folder.h  camel-local-private.h  camel-local-provider.c  camel-local-store.c  camel-local-summary.c  camel-local-summary.h  camel-maildir-folder.c  camel-maildir-store.c  camel-maildir-summary.c  camel-maildir-summary.h  camel-mbox-folder.c  camel-mbox-folder.h  camel-mbox-store.c  camel-mbox-store.h  camel-mbox-summary.c  camel-mbox-summary.h  camel-mbox-view-summary.c  camel-mbox-view-summary.h  camel-mh-folder.c  camel-mh-store.c  camel-mh-summary.c  camel-mh-summary.h  camel-spool-folder.c  camel-spool-folder.h  camel-spool-store.c  camel-spool-summary.c  camel-spool-summary.h
edbus/: .gitignore  Makefile.am  README  ebitlock.c  edbus-marshal.c  edbus.h  edbusconnection.c  edbusconnection.h  edbusconversion.c  edbusconversion.h  edbusenums.h  edbusenumtypes.c  edbusenumtypes.c.template  edbusenumtypes.h  edbusenumtypes.h.template  edbuserror.c  edbuserror.h  edbusintrospection.c  edbusintrospection.h  edbusmethodinvocation.c  edbusmethodinvocation.h  edbusnameowning.c  edbusnameowning.h  edbusnamewatching.c  edbusnamewatching.h  edbusprivate.c  edbusprivate.h  edbusproxy.c  edbusproxy.h  edbusproxywatching.c  edbusproxywatching.h  edbusserver.c  edbusserver.h  edbustypes.h  evariant-core.c  evariant-printer.c  evariant-private.h  evariant-serialiser.c  evariant-serialiser.h  evariant-util.c  (+11 more)
edbus/tests/: .gitignore  Makefile.am  Makefile.decl  connection.c  error.c  export.c  introspection.c  names.c  peer.c  proxy.c  sessionbus.c  sessionbus.h  tests.c  tests.h  testserver.py  threading.c
libebackend/: Makefile.am  e-backend-factory.c  e-backend-factory.h  e-backend-sexp.c  e-backend-sexp.h  e-backend.c  e-backend.h  e-data-factory.c  e-data-factory.h  e-data-types.h  e-data-view.c  e-data-view.h  e-data.c  e-data.h
libedata-gdbus-bindings/: e-data-gdbus-bindings-common.h
libedataserver/: Makefile.am  e-data-server-marshal.c  e-data-server-marshal.h  e-data-server-module.h  e-memory.c  e-msgport.c  e-msgport.h  e-sexp.c  e-sexp.h  e-trie.h  libedataserver.pc.in
libedataserverui/: Makefile.am  e-source-selector.c  e-source-selector.h  e-source-store.c  e-source-store.h  libedataserverui.pc.in  test-source-selector.c
libedbus/: edbus-marshal.c  edbusconnection.c  edbusconversion.c  edbusenumtypes.c  edbusenumtypes.c.template  edbusenumtypes.h  edbusintrospection.c  edbusintrospection.h  edbusmethodinvocation.h  edbusnameowning.c  edbusnameowning.h  edbusnamewatching.h  edbusproxy.c  edbusproxywatching.c  edbusserver.c  edbusserver.h  evariant-private.h  evariant-serialiser.c  evariant-serialiser.h  evarianttype.c  evarianttype.h  evarianttypeinfo.c  evarianttypeinfo.h  example-own-name.c  example-server.c  example-subtree.c  example-watch-name.c  example-watch-proxy.c  gbitlock.c  gbitlock.h  gdbus-marshal.h  gdbus.h  gdbusconnection.h  gdbusconversion.h  gdbusenums.h  gdbusenumtypes.c  gdbusenumtypes.h  gdbuserror.c  gdbuserror.h  gdbusmethodinvocation.c  (+11 more)
po/: POTFILES.in
servers/mapi/: ChangeLog  Makefile.am  exchange-mapi-cal-recur-utils.c  exchange-mapi-cal-recur-utils.h  exchange-mapi-cal-tz-utils.c  exchange-mapi-cal-tz-utils.h  exchange-mapi-cal-utils.c  exchange-mapi-cal-utils.h  exchange-mapi-connection.c  exchange-mapi-connection.h  exchange-mapi-defs.h  exchange-mapi-folder.c  exchange-mapi-folder.h  exchange-mapi-utils.c  exchange-mapi-utils.h
src/: GNOME_Evolution_DataServer.server.in.in  Makefile.am  offline-listener.c  server.c
(+396 files in other folders)
